// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Highlight /> with element prop 1`] = `
.c0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 0;
  text-decoration: none;
  margin-bottom: 0;
  font-size: 18px;
  line-height: 1.12;
}

<Highlight
  element="span"
>
  <TextPrimitive
    color="black"
    element="span"
    size="regular"
    spacing="none"
    variant="p"
    weight="regular"
  >
    <Styled(Primitive$2)
      color="black"
      element="span"
      size="regular"
      spacing="none"
      underline={false}
      weight="regular"
    >
      <Primitive$2
        className="c0"
        color="black"
        element="span"
        size="regular"
        spacing="none"
        underline={false}
        weight="regular"
      >
        <span
          className="c0"
        >
          Element prop test
        </span>
      </Primitive$2>
    </Styled(Primitive$2)>
  </TextPrimitive>
</Highlight>
`;

exports[`<Highlight /> with initial props 1`] = `
.c0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 0;
  text-decoration: none;
  margin-bottom: 0;
  font-size: 18px;
  line-height: 1.12;
}

<Highlight
  size="regular"
>
  <TextPrimitive
    color="black"
    element="p"
    size="regular"
    spacing="none"
    variant="p"
    weight="regular"
  >
    <Styled(Primitive$2)
      color="black"
      element="p"
      size="regular"
      spacing="none"
      underline={false}
      weight="regular"
    >
      <Primitive$2
        className="c0"
        color="black"
        element="p"
        size="regular"
        spacing="none"
        underline={false}
        weight="regular"
      >
        <p
          className="c0"
        >
          Regular size test
        </p>
      </Primitive$2>
    </Styled(Primitive$2)>
  </TextPrimitive>
</Highlight>
`;
